--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment",
+  "name": "Employee Tracker",
   "version": "1.0.0",
   "description": "",
   "main": "node server.js",
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "asciiart-logo": "^0.2.6",
+    "console.table": "^0.10.0",
     "express": "^4.17.2",
+    "inquirer": "^8.2.0",
     "mysql2": "^2.3.3"
   }
 }
